# RUS

./: .gitignore  AUTOMATED_TRAJECTORY_PLANNING_MOTIVATION.md  CMakeLists.txt  COLLISION_CHECKING_IMPLEMENTATION.md  COMPREHENSIVE_EVALUATION_SCHEME.md  ENHANCED_TRAJECTORY_PLANNING_IMPLEMENTATION.md  EVALUATION_EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_IMPLEMENTATION_COMPLETE.md  KNEE_ULTRASOUND_COMPLEXITY_MOTIVATION.md  LITERATURE_REVIEW_REFERENCE_VALUES.md  LOGGING_IMPROVEMENTS_SUMMARY.md  MINIMAL_TRAJECTORY_ENHANCEMENT_PLAN.md  MOTION_GENERATOR_REFACTORING_PLAN.md  MOTION_GENERATOR_RESAMPLING_CHANGES.md  PARALLELIZATION_OPTIMIZATION.md  README.md  README_STOMP_DEBUG.md  ROBOTIC_ULTRASOUND_LITERATURE_REVIEW.md  RUS_ECONOMIC_MOTIVATION_US_HEALTHCARE.md  RUS_SYSTEM_ARCHITECTURE_DOCUMENTATION.md  STATIC_TRAJECTORY_PLANNING_MOTIVATION.md  STOMP_EARLY_STOPPING_IMPLEMENTATION.md  STOMP_INTERFACE_GUIDE.md  STOMP_OBSTACLE_COST_SIMPLIFICATION.md  STOMP_PARAMETER_UPDATE_SUMMARY.md  STOMP_RETRY_IMPLEMENTATION.md  TASK_COMPLETION_SUMMARY_FINAL.md  TRAJECTORYLIB_FULL_TREATMENT_PLAN.md  TRAJECTORYLIB_PHASE2_COST_CALCULATOR_ANALYSIS.md  TRAJECTORY_VALIDATION_USAGE.md  WORKSPACE_CLEANUP.md  adaptive_damping_summary.cpp  adaptive_summary  baseline_results.json  baseline_stomp_config.yaml  build.sh  build_debug.sh  collision_test_config.yaml  collision_test_results.json  (+64 more)
apps/: CMakeLists.txt  bvh_tree_tests.cpp  obstacle_tests.cpp  stomp_test.cpp
apps/AdvancedSTOMPHauserBenchmark/: README.md
apps/ComparisonIK/: CLEANUP_COMPLETION_SUMMARY.md  CMakeLists.txt  README.md  README_CLEANED.md  TestConstraintProjectedNewton  TestConstraintProjectedNewtonComprehensive  TestFeasibilityCheck  TestPoseAnalysis  ThreeMethodComparison  comparison_ik.cpp  comprehensive_comparison_analysis.py  debug_collision_penalty.cpp  generate_complete_analysis.py  generate_simple_noise_data.py  generate_synthetic_noise_analysis.py  grid_search_demo.py  plot_clearance_analysis.py  plot_configuration_variance.py  plot_configuration_variance_analysis.py  plot_execution_time_analysis.py  plot_joint_limit_analysis.py  plot_simple.py  plot_success_rate_analysis.py  plot_underlying_cost_function.py  plot_variance_analysis.py  run_complete_analysis.sh  run_focused_analysis.py  test_adaptive_damping.cpp  test_constraint_projected_newton.cpp  test_constraint_projected_newton_comprehensive.cpp  test_feasibility_check.cpp  test_pose_analysis.cpp  three_method_comparison.cpp  two_execution_time_boxplots.py  underlying_cost_function_generator.cpp
apps/ComparisonSTOMPHauser/: ACADEMIC_BENCHMARK_TABLE.md  ACADEMIC_JUSTIFICATION_REPORT.md  BENCHMARK_ANALYSIS_REPORT.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_STANDARDS_ANALYSIS.md  HAUSER_RRT_ACADEMIC_ANALYSIS.md  HAUSER_RRT_QUICK_REFERENCE.md  METRICS_ANALYSIS_REPORT.md  PARAMETER_QUICK_REFERENCE.md  README.md  STOMPHauserComparison  SimpleConfigurableComparison  VISUALIZATION_GUIDE.md  academic_analysis.py  clearance_calculator.cpp  comprehensive_stomp_visualization.py  debug_study.py  demo_academic_analysis.py  demo_optuna_studies.db  enhanced_analysis.py  hauser_rrt_optimizer.py  hauser_rrt_studies.db  landmark_based_registration.py  optimal_hauser_rrt_config.yaml  optuna_optimizer.py  optuna_studies.db  parameter_optimization_visualization.py  run_comparison.sh  simple_configurable_comparison.cpp  simple_uncertainty_integration.py  stomp_dashboard.py  stomp_focused_optimization.db  stomp_hauser_comparison.cpp  stomp_stopping_analyzer.py  test_optuna_integration.py  thesis_appendix_generator.py  trajectory_analysis.py  uncertainty_analysis.py  uncertainty_objective.py
apps/Evaluator/: CMakeLists.txt  Evaluator  evaluator.cpp
apps/ParallelizationBenchmark/: CMakeLists.txt  ParallelizationBenchmark  main.cpp
apps/ParameterTuning/: .gitignore  APPLICATION_STATUS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  EXECUTIVE_SUMMARY.md  EnhancedParameterEvaluator  IMPLEMENTATION_COMPLETE.md  NSGAII_RESULTS_SUMMARY.md  OPTIMIZATION_RESULTS_SUMMARY.md  PARAMETER_TUNING_COMPLETION_SUMMARY.md  PARAMETER_TUNING_STATUS.md  PRESENTATION_SUMMARY.md  ParameterTuningMain  README.md  README_SMART_OPTIMIZATION.md  USAGE.md  adaptive_parameter_selector.py  advanced_stomp_optimizer.py  complete_test_config.yaml  comprehensive_stomp_optimizer.py  create_comprehensive_plots.py  debug_config.yaml  debug_costs.py  debug_raw_outputs.py  debug_results.json  demo_smart_optimization.py  diagnose_parameter_sensitivity.py  enhanced_parameter_evaluator.cpp  enhanced_parameter_optimizer.py  enhanced_parameter_tuning.h  hard_case_analyzer  hard_case_analyzer.cpp  interface_test_results.json  large_scale_test_config.yaml  multi_objective_evaluator.cpp  multi_objective_optimizer.py  optimal_results.json  optimal_stomp_config.yaml  optimal_success_speed_config.yaml  optimization_results_1753949277.json  (+51 more)
apps/PathPlanner/: CMakeLists.txt  customcameracontroller.cpp  customcameracontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/PythonAnalysis/: CMakeLists.txt  README.md
apps/RVizVisualization/: CMakeLists.txt  obstacle_visualizer.cpp  obstacle_visualizer.h  planning_node.h  planning_node_with_visualization.cpp
apps/ScanProcessTest/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  debug_ik.cpp  debug_test  debug_test.cpp  plot_scan_results.py  requirements.txt  run_scan_analysis.sh  scan_process_test  scan_process_test.cpp
apps/StompDebugger/: CMakeLists.txt  stomp_debugger.cpp
apps/TrajectoryPlanningEvaluator/: CMakeLists.txt  README.md  a.out  trajectory_planning_evaluator
apps/UltrasoundRepositioningEvaluator/: CLEARANCE_IMPLEMENTATION_SUCCESS.md  CMakeLists.txt  CONFIGURATION_GUIDE.md  EXPERT_RECOMMENDATIONS.md  ExampleConfigs  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SINGLE_POSE_IMPLEMENTATION_COMPLETE.md  SimpleSinglePoseDemo  SinglePoseEvaluator  TestAlgorithmConfigs  TestClearanceFunctionality  TestSinglePose  example_configs.cpp  (+11 more)
examples/: CMakeLists.txt  README.md  geometry_example.cpp  trajectory_example.cpp  unified_example.cpp
(+620 files in other folders)
