# Add ScanProcessTest app
add_subdirectory(ScanProcessTest)

# Add ComparisonIK apps
add_subdirectory(ComparisonIK)

# Add UltrasoundRepositioningEvaluator app
add_subdirectory(UltrasoundRepositioningEvaluator)

# Add Python Analysis app
add_subdirectory(PythonAnalysis)

# Add Trajectory Planning Evaluator app
add_subdirectory(TrajectoryPlanningEvaluator)
